# ai-engineer-path-2026

./: main.py  pyproject.toml
week-01/day-01/: async_intro.py  hello_world.py  structured_output.py  structured_output_pydantic.py
